--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="CvParam.fs" />
   </ItemGroup>
 
 </Project>
