--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="ArcType.fs" />
     <Compile Include="CvParam.fs" />
+    <Compile Include="TableTransform.fs" />
   </ItemGroup>
 
 </Project>
