Rename CvParam source file to match module

--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="CvParam.fs" />
+    <Compile Include="Param.fs" />
     <Compile Include="TableTransform.fs" />
   </ItemGroup>
 
