--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Compile Include="ArcTypeTests.fs" />
-    <Compile Include="Tests.fs" />
+    <Compile Include="ParamTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
