Add unit tests for table transform module (WIP)

--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Compile Include="ArcTypeTests.fs" />
     <Compile Include="ParamTests.fs" />
+    <Compile Include="TabeTransformTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
