--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -8,11 +8,13 @@
 
   <ItemGroup>
     <Compile Include="ParamTests.fs" />
-    <Compile Include="TabeTransformTests.fs" />
+    <Compile Include="TableTransformTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FsSpreadsheet" Version="1.0.1" />
+    <PackageReference Include="FsSpreadsheet.ExcelIO" Version="1.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
