--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -6,11 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="FGLAux.fs" />
     <Compile Include="Param.fs" />
     <Compile Include="TableTransform.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.FGL" Version="0.0.4" />
     <PackageReference Include="FSharpAux" Version="1.1.0" />
     <PackageReference Include="FsSpreadsheet" Version="1.0.1" />
   </ItemGroup>
