--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.FGL" Version="0.0.4" />
     <PackageReference Include="FSharpAux" Version="1.1.0" />
     <PackageReference Include="FsSpreadsheet" Version="1.0.1" />
   </ItemGroup>
