--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.FGL" Version="0.0.4" />
+    <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="0.0.2" />
     <PackageReference Include="FSharpAux" Version="1.1.0" />
     <PackageReference Include="FsSpreadsheet" Version="1.0.1" />
   </ItemGroup>
