--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FsSpreadsheet" Version="1.0.1" />
-    <PackageReference Include="FsSpreadsheet.ExcelIO" Version="1.0.1" />
+    <PackageReference Include="FsSpreadsheet" Version="1.2.0-preview" />
+    <PackageReference Include="FsSpreadsheet.ExcelIO" Version="1.2.0-preview" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
