--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="ArcTypeTests.fs" />
     <Compile Include="Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
