--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -12,9 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="0.0.2" />
-    <PackageReference Include="FSharpAux" Version="1.1.0" />
-    <PackageReference Include="FsSpreadsheet" Version="1.2.0-preview" />
+    <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="[0.0.2]" />
+    <PackageReference Include="FSharpAux" Version="[1.1.0]" />
+    <PackageReference Include="FsSpreadsheet" Version="[1.2.0-preview]" />
   </ItemGroup>
 
 </Project>
