--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -6,6 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="CvTokens\CvTerm.fs" />
+    <Compile Include="CvTokens\ParamValue.fs" />
+    <Compile Include="CvTokens\ICvBase.fs" />
+    <Compile Include="CvTokens\IParamBase.fs" />
+    <Compile Include="CvTokens\CvParam.fs" />
+    <Compile Include="CvTokens\UserParam.fs" />
+    <Compile Include="CvTokens\CvObject.fs" />
+    <Compile Include="CvTokens\CvContainer.fs" />
+    <Compile Include="FGLAux.fs" />
     <Compile Include="ArcType.fs" />
     <Compile Include="TableTransform.fs" />
   </ItemGroup>
@@ -14,6 +23,10 @@
     <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="0.0.2" />
     <PackageReference Include="FSharpAux" Version="1.1.0" />
     <PackageReference Include="FsSpreadsheet" Version="1.2.0-preview" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="6.0.7" />
   </ItemGroup>
 
 </Project>
