--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="ParamTests.fs" />
+    <Compile Include="ContainerTests.fs" />
     <Compile Include="TableTransformTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
