--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -14,22 +14,17 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="FsSpreadsheet" Version="1.2.0-preview" />
-    <PackageReference Include="FsSpreadsheet.ExcelIO" Version="1.2.0-preview" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="3.1.2">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Fable.Mocha" Version="2.16.0" />
+		<PackageReference Include="Expecto" Version="9.*" />
+	</ItemGroup>
 
-  <ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.*" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.*" />
+	</ItemGroup>
+
+	<ItemGroup>
     <ProjectReference Include="..\..\src\ArcGraphModel\ArcGraphModel.fsproj" />
   </ItemGroup>
 
