Start type remodeling

--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -8,8 +8,10 @@
   <ItemGroup>
     <Compile Include="CvTokens\CvTerm.fs" />
     <Compile Include="CvTokens\ParamValue.fs" />
-    <Compile Include="CvTokens\ICvBase.fs" />
     <Compile Include="CvTokens\IParamBase.fs" />
+    <Compile Include="CvTokens\ICvBase.fs" />
+    <Compile Include="CvTokens\IParam.fs" />
+    <Compile Include="CvTokens\CvDescriptorCollection.fs" />
     <Compile Include="CvTokens\CvParam.fs" />
     <Compile Include="CvTokens\UserParam.fs" />
     <Compile Include="CvTokens\CvObject.fs" />
