move ArcGraphModel.IO to src folder

--- a/src/ArcGraphModel.IO/ArcGraphModel.IO.fsproj
+++ b/src/ArcGraphModel.IO/ArcGraphModel.IO.fsproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\ArcGraphModel\ArcGraphModel.fsproj" />
+    <ProjectReference Include="..\ArcGraphModel\ArcGraphModel.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
