--- a/tests/ArcGraphModel.IO.Tests/ArcGraphModel.IO.Tests.fsproj
+++ b/tests/ArcGraphModel.IO.Tests/ArcGraphModel.IO.Tests.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="KeyParserTests.fs" />
+    <Compile Include="TokenAggregationTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
