Update github actions and fable dependency

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,8 +17,19 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '6.0.x'
-    - name: Build and test
-      run: dotnet run --project ./build/Build.fsproj runTestsDotNet
+    - name: Restore fable
+      run: dotnet tool restore
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v3
+      with:
+          node-version: 16
+    - name: install node modules
+      run: npm install
+    - name: make script executable
+      run: chmod u+x build.sh
+    - name: Build and test dotnet
+      working-directory: ./
+      run: ./build.sh runtests
 
   build-and-test-windows:
     
@@ -30,5 +41,14 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '6.0.x'
-    - name: Build and test
-      run: dotnet run --project ./build/Build.fsproj runTestsDotNet
+    - name: Restore fable
+      run: dotnet tool restore
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v3
+      with:
+          node-version: 16
+    - name: install node modules
+      run: npm install
+    - name: Build and test dotnet
+      working-directory: ./
+      run: ./build.cmd runtests
