--- a/.gitignore
+++ b/.gitignore
@@ -349,4 +349,5 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /tests/ArcGraphModel.JsNativeTests/fable/**/*.js
+/tests/ArcGraphModel.JsNativeTests/fable/**/*.ts
 /tests/ArcGraphModel.JsNativeTests/fable/**/*.js.map
