--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "fable": "dotnet fable tests/ArcGraphModel.Tests -o tests/ArcGraphModel.JsNativeTests/fable --lang ts --fableLib fable-library",
+    "fablets": "dotnet fable tests/ArcGraphModel.Tests -o tests/ArcGraphModel.JsNativeTests/fable --lang ts --fableLib fable-library",
     "pretest": "npm run fable && tsc --outDir ./dist",
     "test": "mocha tests/ArcGraphModel.JsNativeTests/fable",
     "posttest": "mocha tests/ArcGraphModel.JsNativeTests",
@@ -22,7 +23,7 @@
   },
   "homepage": "https://github.com/nfdi4plants/ArcGraphModel#readme",
   "dependencies": {
-    "fable-library": "^1.0.0"
+    "fable-library": "^1.1.0"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
