--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -24,9 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="0.0.2" />
+    <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="[0.0.2]" />
     <PackageReference Include="FSharpAux.Core" Version="[2.0.0]" />
-    <PackageReference Include="FsSpreadsheet" Version="1.3.0-preview" />
+    <PackageReference Include="FsSpreadsheet" Version="[2.0.2]" />
   </ItemGroup>
 
   <ItemGroup>
