--- a/tests/ArcGraphModel.IO.Tests/ArcGraphModel.IO.Tests.fsproj
+++ b/tests/ArcGraphModel.IO.Tests/ArcGraphModel.IO.Tests.fsproj
@@ -7,32 +7,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Fixtures\**" CopyToOutputDirectory="Always" />
     <Compile Include="TestUtils.fs" />
     <Compile Include="IntegrationTests\ParseInvestigationTests.fs" />
-    <None Include="Fixtures\**" CopyToOutputDirectory="Always" />
-    <Compile Include="KeyParserTests.fs" />
-    <Compile Include="TokenAggregationTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
-	<ItemGroup>
-    <PackageReference Include="Fable.Mocha" Version="2.16.0" />
-    <PackageReference Include="Expecto" Version="9.*" />
+  <ItemGroup>
     <PackageReference Include="FsSpreadsheet" Version="[2.0.2]" />
     <PackageReference Include="FsSpreadsheet.ExcelIO" Version="[2.0.2]" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.*" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.*" />
-	</ItemGroup>
-
-	<ItemGroup>
-    <ProjectReference Include="..\..\src\ArcGraphModel.IO\ArcGraphModel.IO.fsproj" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="6.0.7" />
+    <ProjectReference Include="..\..\src\ArcGraphModel.IO\ArcGraphModel.IO.fsproj" />
   </ItemGroup>
 
 </Project>
