--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -7,25 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="ArcTypeTests.fs" />
     <Compile Include="CvBaseTests.fs" />
     <Compile Include="ParamTests.fs" />
     <Compile Include="ContainerTests.fs" />
-    <Compile Include="TableTransformTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Fable.Mocha" Version="2.16.0" />
-		<PackageReference Include="Expecto" Version="9.*" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.*" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.*" />
-	</ItemGroup>
-
-	<ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\src\ArcGraphModel\ArcGraphModel.fsproj" />
   </ItemGroup>
 
