--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -7,42 +7,51 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="arcstructuralontology\arc_structure.obo" />
-    <Compile Include="CvTokens\CvTerm.fs" />
-    <Compile Include="CvTokens\ParamValue.fs" />
-    <Compile Include="CvTokens\IParamBase.fs" />
-    <Compile Include="CvTokens\ICvBase.fs" />
-    <Compile Include="CvTokens\IParam.fs" />
-    <Compile Include="CvTokens\CvAttributeCollection.fs" />
-    <Compile Include="CvTokens\CvParam.fs" />
-    <Compile Include="CvTokens\UserParam.fs" />
-    <Compile Include="CvTokens\CvObject.fs" />
-    <Compile Include="CvTokens\CvContainer.fs" />
-    <Compile Include="TableTransform.fs" />
-    <Compile Include="Terms.fs" />
+    <None Include="ArcStructuralOntology/arc_structure.obo" />
+    <None Include="ArcStructuralOntology/arc_structure.yml" />
+    <Compile Include="Address.fs" />
+    <Compile Include="ISA\Terms.fs" />
+    <Compile Include="ISA\TableTransform.fs" />
+    <Compile Include="ISA\Regex.fs" />
+    <Compile Include="ISA\KeyParser.fs" />
+    <Compile Include="ISA\Tokenization.fs" />
+    <Compile Include="ISA\TokenAggregation.fs" />
+    <Compile Include="ISA\Worksheet.fs" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="[0.0.2]" />
-    <PackageReference Include="FSharpAux.Core" Version="[2.0.0]" />
-    <PackageReference Include="FsSpreadsheet" Version="[3.1.0]" />
-  </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="ArcStructuralOntology\" />
-  </ItemGroup>
-
-  <ItemGroup />
-  
   <PropertyGroup>
     <Authors>Oliver Maus, Heinrich Lukas Weil, Timo Mühlhaus, Kevin Frey, Kevin Schneider</Authors>
-    <Description>Fsharp Library for working on ARCs as collection of controlled vocabulary token</Description>
-    <Summary>Fsharp Library for working on ARCs as collection of controlled vocabulary token</Summary>
+    <Description>Fsharp Library for tokenization of isa and cwl files into the ArcGraphModel</Description>
+    <Summary>Fsharp Library for tokenization of isa and cwl files into the ArcGraphModel</Summary>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <!--<PackageIcon>logo.png</PackageIcon>-->
-    <PackageTags>F# FSharp datascience rdm arc dataplant nfdi4plants fable fable-library fable-javascript</PackageTags>
+    <PackageTags>F# FSharp datascience rdm arc dataplant nfdi4plants xlsx io isa fable fable-library fable-javascript</PackageTags>
     <RepositoryUrl>https://github.com/nfdi4plants/ArcGraphModel</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ControlledVocabulary\ControlledVocabulary.fsproj" PackageVersion="[0.0.0, 1.0.0)" />
+    <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="[0.0.2]" />
+    <PackageReference Include="FSharpAux.Core" Version="[2.0.0]" />
+    <PackageReference Include="FsSpreadsheet" Version="[3.1.1]" />
+    <PackageReference Include="FsSpreadsheet.ExcelIO" Version="[3.1.1]" />
+  </ItemGroup>
+
+  <Target Name="UseExplicitPackageVersions" BeforeTargets="GenerateNuspec">
+    <ItemGroup>
+      <_ProjectReferenceWithExplicitPackageVersion Include="@(ProjectReference->'%(FullPath)')" Condition="'%(ProjectReference.PackageVersion)' != ''" />
+      <_ProjectReferenceWithExactPackageVersion Include="@(ProjectReference->'%(FullPath)')" Condition="'%(ProjectReference.ExactVersion)' == 'true'" />
+      <_ProjectReferenceWithReassignedVersion Include="@(_ProjectReferencesWithVersions)" Condition="'%(Identity)' != '' And '@(_ProjectReferenceWithExplicitPackageVersion)' == '@(_ProjectReferencesWithVersions)'">
+        <ProjectVersion>@(_ProjectReferenceWithExplicitPackageVersion->'%(PackageVersion)')</ProjectVersion>
+      </_ProjectReferenceWithReassignedVersion>
+      <_ProjectReferenceWithReassignedVersion Include="@(_ProjectReferencesWithVersions)" Condition="'%(Identity)' != '' And '@(_ProjectReferenceWithExactPackageVersion)' == '@(_ProjectReferencesWithVersions)'">
+        <ProjectVersion>[@(_ProjectReferencesWithVersions->'%(ProjectVersion)')]</ProjectVersion>
+      </_ProjectReferenceWithReassignedVersion>
+      <_ProjectReferencesWithVersions Remove="@(_ProjectReferenceWithReassignedVersion)" />
+      <_ProjectReferencesWithVersions Include="@(_ProjectReferenceWithReassignedVersion)" />
+    </ItemGroup>
+  </Target>
 
 </Project>
