--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,13 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="CvBaseTests.fs" />
-    <Compile Include="ParamTests.fs" />
-    <Compile Include="ContainerTests.fs" />
+    <None Include="Fixtures\**" CopyToOutputDirectory="Always" />
+    <Compile Include="TestUtils.fs" />
+    <Compile Include="IntegrationTests\ParseInvestigationTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -28,10 +29,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\ArcGraphModel\ArcGraphModel.fsproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="6.0.7" />
+    <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="[0.0.2]" />
+    <PackageReference Include="FSharpAux.Core" Version="[2.0.0]" />
+    <PackageReference Include="FsSpreadsheet" Version="[3.1.1]" />
+    <PackageReference Include="FsSpreadsheet.ExcelIO" Version="[3.1.1]" />
   </ItemGroup>
 
 </Project>
