--- a/tests/ControlledVocabulary.Tests/ControlledVocabulary.Tests.fsproj
+++ b/tests/ControlledVocabulary.Tests/ControlledVocabulary.Tests.fsproj
@@ -7,15 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Fixtures\**" CopyToOutputDirectory="Always" />
-    <Compile Include="TestUtils.fs" />
-    <Compile Include="IntegrationTests\ParseInvestigationTests.fs" />
+    <Compile Include="CvBaseTests.fs" />
+    <Compile Include="ParamTests.fs" />
+    <Compile Include="ContainerTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FsSpreadsheet" Version="[2.0.2]" />
-    <PackageReference Include="FsSpreadsheet.ExcelIO" Version="[2.0.2]" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -29,7 +27,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\ArcGraphModel.IO\ArcGraphModel.IO.fsproj" />
+    <ProjectReference Include="..\..\src\ControlledVocabulary\ControlledVocabulary.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="6.0.7" />
   </ItemGroup>
 
 </Project>
