--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -11,7 +11,7 @@
     <None Include="ArcStructuralOntology/arc_structure.yml" />
     <Compile Include="Address.fs" />
     <Compile Include="ISA\Terms.fs" />
-    <Compile Include="ISA\TableTransform.fs" />
+    <Compile Include="ISA\AnnotationTable.fs" />
     <Compile Include="ISA\Regex.fs" />
     <Compile Include="ISA\KeyParser.fs" />
     <Compile Include="ISA\Tokenization.fs" />
@@ -35,6 +35,7 @@
     <ProjectReference Include="..\ControlledVocabulary\ControlledVocabulary.fsproj" PackageVersion="[0.0.0, 1.0.0)" />
     <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="[0.0.2]" />
     <PackageReference Include="FSharpAux.Core" Version="[2.0.0]" />
+    <PackageReference Include="FsOboParser" Version="0.1.0" />
     <PackageReference Include="FsSpreadsheet" Version="[3.1.1]" />
     <PackageReference Include="FsSpreadsheet.ExcelIO" Version="[3.1.1]" />
   </ItemGroup>
