--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -17,6 +17,7 @@
     <Compile Include="ISA\Tokenization.fs" />
     <Compile Include="ISA\TokenAggregation.fs" />
     <Compile Include="ISA\Worksheet.fs" />
+    <Compile Include="ISA\TopLevelParsers.fs" />
   </ItemGroup>
 
 
