--- a/src/ArcGraphModel/structural_ontologies/investigation_metadata_structural_ontology.yml
+++ b/src/ArcGraphModel/structural_ontologies/investigation_metadata_structural_ontology.yml
@@ -17,25 +17,25 @@ def: ""
 
     [Term]
     id: INVMSO:00000003
-    name: Ontology Source Name
+    name: Term Source Name
     def: ""
     relationship: part_of INVMSO:00000002 ! ONTOLOGY SOURCE REFERENCE
 
     [Term]
     id: INVMSO:00000004
-    name: Ontology Source File
+    name: Term Source File
     def: ""
     relationship: part_of INVMSO:00000002 ! ONTOLOGY SOURCE REFERENCE
 
     [Term]
     id: INVMSO:00000005
-    name: Ontology Source Version
+    name: Term Source Version
     def: ""
     relationship: part_of INVMSO:00000002 ! ONTOLOGY SOURCE REFERENCE
 
     [Term]
     id: INVMSO:00000006
-    name: Ontology Source Description
+    name: Term Source Description
     def: ""
     relationship: part_of INVMSO:00000002 ! ONTOLOGY SOURCE REFERENCE
 
@@ -76,10 +76,16 @@ def: ""
     relationship: part_of INVMSO:00000007 ! INVESTIGATION
 
   [Term]
-  id: INVMSO:0000014
+  id: INVMSO:0000013
   name: INVESTIGATION PUBLICATIONS
   def: ""
   relationship: part_of INVMSO:00000001 ! Investigation Metadata
+
+    [Term]
+    id: INVMSO:00000014
+    name: Investigation PubMed ID
+    def: ""
+    relationship: part_of INVMSO:0000014 ! INVESTIGATION PUBLICATIONS
 
     [Term]
     id: INVMSO:00000015
@@ -189,368 +195,362 @@ def: ""
     def: ""
     relationship: part_of INVMSO:0000021 ! INVESTIGATION CONTACTS
 
-    [Term]
-    id: INVMSO:00000033
-    name: Investigation Person ORCID
-    def: ""
-    relationship: part_of INVMSO:0000021 ! INVESTIGATION CONTACTS
-
   [Term]
   name: STUDY
-  id: INVMSO:00000034
+  id: INVMSO:00000033
   def: ""
   relationship: part_of INVMSO:00000001 ! Investigation Metadata
 
     [Term]
-    id: INVMSO:00000035
+    id: INVMSO:00000034
     name: Study Identifier
     def: ""
     relationship: part_of INVMSO:00000034 ! STUDY
 
     [Term]
-    id: INVMSO:00000036
+    id: INVMSO:00000035
     name: Study Title
     def: ""
     relationship: part_of INVMSO:00000034 ! STUDY
 
     [Term]
-    id: INVMSO:00000037
+    id: INVMSO:00000036
     name: Study Description
     def: ""
     relationship: part_of INVMSO:00000034 ! STUDY
 
     [Term]
-    id: INVMSO:00000038
+    id: INVMSO:00000037
     name: Study Submission Date
     def: ""
     relationship: part_of INVMSO:00000034 ! STUDY
 
     [Term]
-    id: INVMSO:00000039
+    id: INVMSO:00000038
     name: Study Public Release Date
     def: ""
     relationship: part_of INVMSO:00000034 ! STUDY
 
     [Term]
-    id: INVMSO:00000040
+    id: INVMSO:00000039
     name: Study File Name
     def: ""
     relationship: part_of INVMSO:00000034 ! STUDY
 
   [Term]
-  id: INVMSO:00000041
+  id: INVMSO:00000040
   name: STUDY DESIGN DESCRIPTORS
   def: ""
   relationship: part_of INVMSO:00000001 ! Investigation Metadata
 
     [Term]
-    id: INVMSO:00000042
+    id: INVMSO:00000041
     name: Study Design Type
     def: ""
     relationship: part_of INVMSO:00000041 ! STUDY DESIGN DESCRIPTORS
 
     [Term]
-    id: INVMSO:00000043
+    id: INVMSO:00000042
     name: Study Design Type Term Accession Number
     def: ""
     relationship: part_of INVMSO:00000041 ! STUDY DESIGN DESCRIPTORS
 
     [Term]
-    id: INVMSO:00000044
+    id: INVMSO:00000043
     name: Study Design Type Term Source REF
     def: ""
     relationship: part_of INVMSO:00000041 ! STUDY DESIGN DESCRIPTORS
 
   [Term]
-  id: INVMSO:00000045
+  id: INVMSO:00000044
   name: STUDY PUBLICATIONS
   def: ""
   relationship: part_of INVMSO:00000001 ! Investigation Metadata
 
     [Term]
-    id: INVMSO:00000046
+    id: INVMSO:00000045
     name: Study Publication PubMed ID
     def: ""
     relationship: part_of INVMSO:00000045 ! STUDY PUBLICATIONS
 
     [Term]
-    id: INVMSO:00000047
+    id: INVMSO:00000046
     name: Study Publication DOI
     def: ""
     relationship: part_of INVMSO:00000045 ! STUDY PUBLICATIONS
 
     [Term]
-    id: INVMSO:00000048
+    id: INVMSO:00000047
     name: Study Publication Author List
     def: ""
     relationship: part_of INVMSO:00000045 ! STUDY PUBLICATIONS
 
     [Term]
-    id: INVMSO:00000049
+    id: INVMSO:00000048
     name: Study Publication Title
     def: ""
     relationship: part_of INVMSO:00000045 ! STUDY PUBLICATIONS
 
     [Term]
-    id: INVMSO:00000050
+    id: INVMSO:00000049
     name: Study Publication Status
     def: ""
     relationship: part_of INVMSO:00000045 ! STUDY PUBLICATIONS
 
     [Term]
-    id: INVMSO:00000051
+    id: INVMSO:00000050
     name: Study Publication Status Term Accession Number
     def: ""
     relationship: part_of INVMSO:00000045 ! STUDY PUBLICATIONS
 
     [Term]
-    id: INVMSO:00000052
+    id: INVMSO:00000051
     name: Study Publication Status Term Source REF
     def: ""
     relationship: part_of INVMSO:00000045 ! STUDY PUBLICATIONS
 
   [Term]
-  id: INVMSO:00000053
+  id: INVMSO:00000052
   name: STUDY FACTORS
   def: ""
   relationship: part_of INVMSO:00000001 ! Investigation Metadata
 
     [Term]
-    id: INVMSO:00000054
+    id: INVMSO:00000053
     name: Study Factor Name
     def: ""
     relationship: part_of INVMSO:00000053 ! STUDY FACTORS
 
     [Term]
-    id: INVMSO:00000055
+    id: INVMSO:00000054
     name: Study Factor Type
     def: ""
     relationship: part_of INVMSO:00000053 ! STUDY FACTORS
 
     [Term]
-    id: INVMSO:00000056
+    id: INVMSO:00000055
     name: Study Factor Type Term Accession Number
     def: ""
     relationship: part_of INVMSO:00000053 ! STUDY FACTORS
 
     [Term]
-    id: INVMSO:00000057
+    id: INVMSO:00000056
     name: Study Factor Type Term Source REF
     def: ""
     relationship: part_of INVMSO:00000053 ! STUDY FACTORS
 
   [Term]
-  id: INVMSO:00000058
+  id: INVMSO:00000057
   name: STUDY ASSAYS
   def: ""
   relationship: part_of INVMSO:00000001 ! Investigation Metadata
 
     [Term]
-    id: INVMSO:00000059
+    id: INVMSO:00000058
     name: Study Assay Measurement Type
     def: ""
     relationship: part_of INVMSO:00000058 ! STUDY ASSAYS
 
     [Term]
-    id: INVMSO:00000060
+    id: INVMSO:00000059
     name: Study Assay Measurement Type Term Accession Number
     def: ""
     relationship: part_of INVMSO:00000058 ! STUDY ASSAYS
 
     [Term]
-    id: INVMSO:00000061
+    id: INVMSO:00000060
     name: Study Assay Measurement Type Term Source REF
     def: ""
     relationship: part_of INVMSO:00000058 ! STUDY ASSAYS
 
     [Term]
-    id: INVMSO:00000062
+    id: INVMSO:00000061
     name: Study Assay Technology Type
     def: ""
     relationship: part_of INVMSO:00000058 ! STUDY ASSAYS
 
     [Term]
-    id: INVMSO:00000063
+    id: INVMSO:00000062
     name: Study Assay Technology Type Term Accession Number
     def: ""
     relationship: part_of INVMSO:00000058 ! STUDY ASSAYS
 
     [Term]
-    id: INVMSO:00000064
+    id: INVMSO:00000063
     name: Study Assay Technology Type Term Source REF
     def: ""
     relationship: part_of INVMSO:00000058 ! STUDY ASSAYS
 
     [Term]
-    id: INVMSO:00000065
+    id: INVMSO:00000064
     name: Study Assay Technology Platform
     def: ""
     relationship: part_of INVMSO:00000058 ! STUDY ASSAYS
 
     [Term]
-    id: INVMSO:00000066
+    id: INVMSO:00000065
     name: Study Assay File Name
     def: ""
     relationship: part_of INVMSO:00000058 ! STUDY ASSAYS
 
   [Term]
-  id: INVMSO:00000067
+  id: INVMSO:00000066
   name: STUDY PROTOCOLS
   def: ""
   relationship: part_of INVMSO:00000001 ! Investigation Metadata
 
     [Term]
-    id: INVMSO:00000068
+    id: INVMSO:00000067
     name: Study Protocol Name
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000069
+    id: INVMSO:00000068
     name: Study Protocol Type
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000070
+    id: INVMSO:00000069
     name: Study Protocol Type Term Accession Number
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000071
+    id: INVMSO:00000070
     name: Study Protocol Type Term Source REF
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000072
+    id: INVMSO:00000071
     name: Study Protocol Description
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000073
+    id: INVMSO:00000072
     name: Study Protocol URI
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000074
+    id: INVMSO:00000073
     name: Study Protocol Version
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000075
+    id: INVMSO:00000074
     name: Study Protocol Parameters Name
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000076
+    id: INVMSO:00000075
     name: Study Protocol Parameters Term Accession Number
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000077
+    id: INVMSO:00000076
     name: Study Protocol Parameters Term Source REF
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000078
+    id: INVMSO:00000077
     name: Study Protocol Components Name
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000079
+    id: INVMSO:00000078
     name: Study Protocol Components Type
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000080
+    id: INVMSO:00000079
     name: Study Protocol Components Type Term Accession Number
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
     [Term]
-    id: INVMSO:00000081
+    id: INVMSO:00000080
     name: Study Protocol Components Type Term Source REF
     def: ""
     relationship: part_of INVMSO:00000067 ! STUDY PROTOCOLS
 
   [Term]
-  id: INVMSO:00000082
+  id: INVMSO:00000081
   name: STUDY CONTACTS
   def: ""
   relationship: part_of INVMSO:00000001 ! Investigation Metadata
 
     [Term]
-    id: INVMSO:00000083
+    id: INVMSO:00000082
     name: Study Person Last Name
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000084
+    id: INVMSO:00000083
     name: Study Person First Name
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000085
+    id: INVMSO:00000084
     name: Study Person Mid Initials
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000086
+    id: INVMSO:00000085
     name: Study Person Email
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000087
+    id: INVMSO:00000086
     name: Study Person Phone
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000088
+    id: INVMSO:00000087
     name: Study Person Fax
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000089
+    id: INVMSO:00000088
     name: Study Person Address
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000090
+    id: INVMSO:00000089
     name: Study Person Affiliation
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000091
+    id: INVMSO:00000090
     name: Study Person Roles
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000092
+    id: INVMSO:00000091
     name: Study Person Roles Term Accession Number
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
 
     [Term]
-    id: INVMSO:00000093
+    id: INVMSO:00000092
     name: Study Person Roles Term Source REF
     def: ""
     relationship: part_of INVMSO:00000082 ! STUDY CONTACTS
