--- a/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
+++ b/tests/ArcGraphModel.Tests/ArcGraphModel.Tests.fsproj
@@ -10,8 +10,11 @@
     <None Include="Fixtures\**" CopyToOutputDirectory="Always" />
     <Compile Include="TestUtils.fs" />
     <Compile Include="TestObjects.fs" />
-    <Compile Include="IntegrationTests\Assay.fs" />
-    <Compile Include="IntegrationTests\ParseInvestigationTests.fs" />
+    <Compile Include="IntegrationTests\StudyMetadata.fs" />
+    <Compile Include="IntegrationTests\StudyAnnotationTable.fs" />
+    <Compile Include="IntegrationTests\AssayMetadata.fs" />
+    <Compile Include="IntegrationTests\AssayAnnotationTable.fs" />
+    <Compile Include="IntegrationTests\InvestigationMetadata.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
