--- a/src/ArcGraphModel/ArcGraphModel.fsproj
+++ b/src/ArcGraphModel/ArcGraphModel.fsproj
@@ -48,7 +48,7 @@
     <ProjectReference Include="..\ControlledVocabulary\ControlledVocabulary.fsproj" PackageVersion="[0.0.0, 1.0.0)" />
     <PackageReference Include="FSharp.FGL.ArrayAdjacencyGraph" Version="[0.0.2]" />
     <PackageReference Include="FSharpAux.Core" Version="[2.0.0]" />
-    <PackageReference Include="FsOboParser" Version="0.1.0" />
+    <PackageReference Include="FsOboParser" Version="[0.1.0]" />
     <PackageReference Include="FsSpreadsheet" Version="[3.1.1]" />
     <PackageReference Include="FsSpreadsheet.ExcelIO" Version="[3.1.1]" />
   </ItemGroup>
