rename library to ARCTokenization, update package metadata

--- a/src/ARCTokenization/ARCTokenization.fsproj
+++ b/src/ARCTokenization/ARCTokenization.fsproj
@@ -7,39 +7,30 @@
   </PropertyGroup>
 
   <ItemGroup>
-
     <EmbeddedResource Include="structural_ontologies/investigation_metadata_structural_ontology.obo" CopyToOutputDirectory="Always" />
     <EmbeddedResource Include="structural_ontologies/study_metadata_structural_ontology.obo" CopyToOutputDirectory="Always" />
     <EmbeddedResource Include="structural_ontologies/assay_metadata_structural_ontology.obo" CopyToOutputDirectory="Always" />
     <None Include="structural_ontologies/investigation_metadata_structural_ontology.yml" />
     <None Include="structural_ontologies/study_metadata_structural_ontology.yml" />
     <None Include="structural_ontologies/assay_metadata_structural_ontology.yml" />
-
     <Compile Include="Address.fs" />
-
     <Compile Include="Terms.fs" />
-
     <Compile Include="Regex.fs" />
-
     <Compile Include="AnnotationTable.fs" />
-
     <Compile Include="MetadataSheet.fs" />
-
     <Compile Include="Tokenization.fs" />
-
     <Compile Include="Workbook.fs" />
     <Compile Include="Worksheet.fs" />
     <Compile Include="TopLevelParsers.fs" />
   </ItemGroup>
 
-
   <PropertyGroup>
-    <Authors>Oliver Maus, Heinrich Lukas Weil, Timo Mühlhaus, Kevin Frey, Kevin Schneider</Authors>
-    <Description>Fsharp Library for tokenization of isa and cwl files into the ArcGraphModel</Description>
-    <Summary>Fsharp Library for tokenization of isa and cwl files into the ArcGraphModel</Summary>
+    <Authors>Oliver Maus, Kevin Schneider, Heinrich Lukas Weil, Timo Mühlhaus, Kevin Frey</Authors>
+    <Description>F# library for tokenization of ARC metadata into controlled vocabulary tokens</Description>
+    <Summary>F# library for tokenization of ARC metadata into controlled vocabulary tokens</Summary>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <!--<PackageIcon>logo.png</PackageIcon>-->
-    <PackageTags>F# FSharp datascience rdm arc dataplant nfdi4plants xlsx io isa fable fable-library fable-javascript</PackageTags>
+    <PackageTags>F# FSharp datascience rdm arc dataplant nfdi4plants xlsx isa</PackageTags>
     <RepositoryUrl>https://github.com/nfdi4plants/ArcGraphModel</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
@@ -51,10 +42,6 @@
     <PackageReference Include="FsOboParser" Version="[0.1.0]" />
     <PackageReference Include="FsSpreadsheet" Version="[3.1.1]" />
     <PackageReference Include="FsSpreadsheet.ExcelIO" Version="[3.1.1]" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ISA\" />
   </ItemGroup>
 
   <Target Name="UseExplicitPackageVersions" BeforeTargets="GenerateNuspec">
