Add tests for parseKeyWithTerms

--- a/tests/ARCTokenization.Tests/ARCTokenization.Tests.fsproj
+++ b/tests/ARCTokenization.Tests/ARCTokenization.Tests.fsproj
@@ -10,7 +10,9 @@
     <None Include="Fixtures\**" CopyToOutputDirectory="Always" />
     <Compile Include="TestUtils.fs" />
     <Compile Include="TestObjects.fs" />
+    <Compile Include="ReferenceObjects.fs" />
     <Compile Include="StructuralOntologytests.fs" />
+    <Compile Include="TokenizationTests\ParserFunctions.fs" />
     <Compile Include="IntegrationTests\InvestigationMetadata.fs" />
     <Compile Include="IntegrationTests\StudyMetadata.fs" />
     <Compile Include="IntegrationTests\StudyAnnotationTable.fs" />
